samples/_failures_safe/1761352247_b09417_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f54f3998.c: In function ‘token_type_to_string’:
./samples/SAFE/__tmp_f54f3998.c:176:5: error: expected expression at end of input
  176 |     switch (type)
      |     ^~~~~~
./samples/SAFE/__tmp_f54f3998.c:176:5: error: expected declaration or statement at end of input
